--- a/package.json
+++ b/package.json
@@ -20,7 +20,16 @@
   ],
   "scripts": {
     "build": "tsc",
+    "postinstall": "is-ci || husky install",
+    "precommit": "lint-staged",
     "release": "release-it"
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx}": "eslint --fix"
+  },
+  "prettier": "@chieforz/prettier-config",
+  "eslintConfig": {
+    "extends": "@chieforz/eslint-config-tslint-base"
   },
   "dependencies": {
     "@t3-oss/env-core": "^0.6.0",
@@ -30,9 +39,18 @@
     "zx": "^7.2.3"
   },
   "devDependencies": {
+    "@chieforz/eslint-config-tslint-base": "^1.1.3",
+    "@chieforz/prettier-config": "^1.1.3",
+    "@chieforz/renovate-config": "^1.1.3",
+    "@commitlint/cli": "^17.6.6",
+    "@commitlint/config-conventional": "^17.6.6",
     "@release-it/conventional-changelog": "^6.0.0",
     "@types/node": "^20.4.1",
-    "release-it": "^15.4.1"
+    "husky": "^8.0.3",
+    "is-ci": "^3.0.1",
+    "lint-staged": "^13.2.3",
+    "release-it": "^15.11.0",
+    "typescript": "^5.1.6"
   },
   "engines": {
     "node": ">=18.0.0"
